--- a/2 - Påske/Easter/Easter.csproj
+++ b/2 - Påske/Easter/Easter.csproj
@@ -12,4 +12,10 @@
       <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Include="wwwroot\index.html" />
+      <None Include="wwwroot\JavaScript.js" />
+      <None Include="wwwroot\StyleSheet.css" />
+    </ItemGroup>
+
 </Project>
